--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "mime-types": "^2.1.35",
+    "moment": "^2.30.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.0",
+    "react-select": "^5.8.0",
+    "sonner": "^1.4.41",
+    "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
     "postcss": "^8",
